Filtros para novas pesquisas de jogadores e rodadas do campeonato

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -200,6 +200,10 @@ label{
     margin: auto;
 }
 
+.font-geral{
+    color: #F4F4F4;
+}
+
 .form-element{
     margin-right: 10px;
     margin-left: 10px;
