--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -26,6 +26,12 @@ h2{
     text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
+h4{
+    color: white;
+    text-align: center;
+    text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 label{
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
