Ajuste listagem de palpites

--- a/views/public/palpites/index.ejs
+++ b/views/public/palpites/index.ejs
@@ -107,10 +107,10 @@
     function consultarPalpites(){
         const jogador = document.getElementById('jogador').value;
         const rodada = document.getElementById('rodada').value;
-        const campeonatoPalpites = document.getElementById('idCampeonato').value;
+        const campeonatoPalpite = document.getElementById('idCampeonato').value;
         const campeonato = document.getElementById('campeonato').value;
 
-        window.location.href = `/palpites/list/${campeonato}/${campeonatoPalpites}/${jogador}/${rodada}/`;
+        window.location.href = `/palpites/list/${campeonato}/${campeonatoPalpite}/${jogador}/${rodada}/`;
     }
 
 </script>
