Ajuste na consuta de novos palpites e criação de palpites por rodada

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -156,6 +156,10 @@ label{
     width: 90%;
 }
 
+.table-header{
+    background-color: #525252;
+}
+
 .bg-orange-total{
     background:rgba(252, 111, 18);
 }
