Listagem da tabela do campeonato pós processamento

--- a/views/admin/tabelas/index.ejs
+++ b/views/admin/tabelas/index.ejs
@@ -29,7 +29,7 @@
             <% partidas.forEach(partida=>{ %>
                 <tr>
                     <th><%= partida.colocacao %></th>
-                    <th><%= partida.Campeonato %></th>
+                    <th><%= partida.time.time %></th>
                     <th><%= partida.pontos %></th>
                     <th><%= partida.jogos %></th>
                     <th><%= partida.vitorias %></th>
